# Virent

./: .gitignore  PRODUCTION-READINESS-PLAN.md  README.md  SECURITY.md  docker-compose.pc.yml  docker-compose.yml  orchestrator_prompts_1.json  orchestrator_state.json  worklog.md
.github/workflows/: build-apk-native.yml  build-apk.yml  build-apps.yml  build-barqscoot-apk.yml  build-eas.yml  build-virent-dart.yml  build-windows-barqscoot.yml  build-windows-virent.yml  tests.yml
backend/: Dockerfile  app.js  package-lock.json  package.json
backend/.github/workflows/: tests.yml
backend/backend/src/modules/favorites/: favorite.service.js
backend/db/: README.md
backend/db/access-patterns/: audit_log.append.yaml  otp_codes.createAndSend.yaml  scooters.findNearestAvailable.yaml  scooters.listAvailable.yaml  support_tickets.listByUser.yaml  transactions.aggregateRevenue.yaml  trips.getActiveByUser.yaml  trips.listByUser.yaml  users.findByEmail.yaml
backend/db/migrations/: 202606170001_create_core_tables.sql
backend/docs/constitution/: CONSTITUTION.md
backend/scripts/: backup-mongodb.sh  restore-mongodb.sh  run-all-tests.sh
backend/src/: README.md
backend/src/contracts/: openapi.yaml
backend/src/modules/auth/contracts/: auth.dto.js
backend/src/modules/auth/domain/: auth.entity.js
backend/src/modules/auth/tests/: auth.entity.test.js
backend/src/modules/cities/api/: city-info.routes.js  city.routes.js
backend/src/modules/cities/application/: city-info.service.js  city.service.js
backend/src/modules/cities/infrastructure/: city.repository.js
backend/src/modules/email/: email.service.js
backend/src/modules/exports/: export.routes.js  export.service.js
backend/src/modules/favorites/: favorite.service.js
backend/src/modules/favorites/api/: favorite.routes.js
backend/src/modules/legal/: legal.routes.js  legal.service.js
backend/src/modules/maintenance/: scheduler.js
backend/src/modules/receipts/: receipt.routes.js  receipt.service.js
backend/src/modules/scooters/contracts/: scooter.dto.js
backend/src/modules/search/: search.routes.js  search.service.js
backend/src/modules/trips/: README.md
backend/src/modules/trips/api/: trip.controller.js  (+1 more)
backend/src/modules/twofa/: twofa.routes.js  twofa.service.js
backend/src/realtime/: ws-server.js
backend/src/shared/: auth-middleware.js  cache.js  db.js  errors.js  http.js  idempotency.js  logger.js  metrics.js  permissions.js  user-rate-limit.js  validation.js
backend/src/shared/tests/: validation.test.js
backend/src/views/: dashboard.view.js  executor.js  routes.js  trip-detail.view.js
backend/v1/: index.js
backend/v1/documentation/: documentation.html
backend/v1/models/: auditlog.js  auth.js  auth_ext.js  db_indexes.js  discovery.js  geofencing.js  iot.js  juicers.js  mechanics.js  notifications.js  prepaid.js  promocodes.js  scooters.js  sms.js  stats.js  support.js  system.js  transactions.js  trips.js  uploads.js  user_settings.js
backend/v1/route/: admin_ext.js  auditlog.js  auth_ext.js  discovery.js  geofencing.js  iot.js  juicers.js  mechanics.js  notifications.js  promocodes.js  sms.js  stats.js  support.js  system.js  transactions.js  trips.js  uploads.js  user_settings.js
barqscoot-server/: README.md  package.json  server.js
desktop-app/: CMakeLists.txt  README.md
desktop-app/resources/: resource.rc.in
desktop-app/src/: admin_tabs.cpp  app.cpp  app.h  main.cpp
desktop-app/src/core/: api_client.cpp  api_client.h  config.cpp  config.h  docker.cpp  docker.h  installer_core.cpp  installer_core.h  native_bridge.cpp  native_bridge.h  scooter_mgr.cpp  scooter_mgr.h
desktop-app/src/ui/: dashboard.cpp  dashboard.h  installer.cpp  installer.h  scooters.cpp  scooters.h  server_tab.cpp  server_tab.h  theme.cpp  theme.h  webview_host.cpp  webview_host.h  window.cpp  window.h
desktop-app/src/utils/: logger.h  process.cpp  process.h
desktop-app/web-ui/: app.js  index.html  styles.css
docs/: CHANGELOG.md  DEPLOY-PC.md  DEPLOYMENT.md  MISSING-FEATURES.md  QUICKSTART.md  STYLE-GUIDE.md
frontend/admin-dashboard/: Dockerfile  nginx.conf
mobile/: .gitignore  App.tsx  README.md  app.json  eas.json  package.json  tsconfig.json
mobile/styles/: tokens.ts
mobile/types/: env.d.ts
osrm-setup/: setup-local-osrm.sh
scripts/: extract_admin_colors.py  fix_8_pages.py  fix_admin_ux.py  fix_broken_escaping.py  fix_datatable_props.py  fix_duplicate_context_final.py  fix_empty_widget_balance.py  fix_helpers.py  fix_import_order.py  fix_import_order_v2.py  fix_ui_consistency.py  generate-bundled-tiles.sh  infinite_loop.py  orchestrator_loop.py  persistent_loop.sh  replace_helpers.py  replace_helpers_v2.py  verify_balance.py
tool-results/: bash_1782071341146_7929df00d4e0.txt  bash_1782136743614_613150f6c9cc.txt  bash_1782824821753_bc132444e7ab.txt  bash_1782827286878_e65dd97d65c0.txt  grep_1782071236546_38042897dc70.txt  grep_1782827943479_c63cd5ca56b7.txt  read_1782071239000_3a057c6e3ec4.txt  read_1782072734507_1ce832e708f6.txt  read_1782072737364_9346d3c36f9a.txt  read_1782072740673_a443af445a0f.txt  read_1782827290197_a3cf262812a8.txt  read_1782827293383_00f9be083045.txt  read_1782827315287_48b10aa537e6.txt  read_1782827990919_b35478a79e06.txt  read_1782834409386_7b646cd0275b.txt
virent-dart/: COMPETITOR-ANALYSIS.md  GAP-ANALYSIS.md  GLOBAL-SERVER.md  LIME-ANALYSIS.md  README.md  SWIFT-ANALYSIS.md  UI-DESIGN-GUIDE.md  start-tunnel.sh
virent-dart/backend/: Dockerfile  README.md  pubspec.yaml
virent-dart/backend/lib/routes/: all_routes.dart  auth.dart  scooters.dart  trips.dart  users.dart  wallet.dart
virent-dart/mobile/: README.md  pubspec.yaml
virent-dart/mobile/assets/tiles/: README.md
virent-dart/mobile/installer/: virent.iss
virent-dart/mobile/lib/: app_router.dart  main.dart  main_web.dart  web_init.dart  web_init_stub.dart
virent-dart/mobile/lib/l10n/: app_localizations.dart
virent-dart/mobile/lib/utils/: logger.dart
virent-dart/mobile/scripts/: setup-ngrok.bat
virent-dart/mobile/test/: widget_test.dart
virent-dart/mobile/web/: index.html  manifest.json
(+245 files in other folders)
